{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 223,
  "lineage": "4451f800-f8e4-8a65-d3d3-5230782a545d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-07e47e9d90d2076da"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-07e47e9d90d2076da"
                ]
              }
            ],
            "id": "igw-06e7af22039dabe62",
            "internet_gateway_id": "igw-06e7af22039dabe62",
            "owner_id": "135928476890"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be891d5073a33345",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-09cef0081f7aef8e5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09cef0081f7aef8e5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "len_terra2",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a161746bae06ffae",
            "private_dns": "ip-172-31-8-60.eu-west-1.compute.internal",
            "private_ip": "172.31.8.60",
            "public_dns": "ec2-52-49-228-181.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.228.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d8e43ea2d2d533df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "LenLen Destroy SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023c6f924c28409fd",
            "tags": {
              "Name": "LBA-destroy-this"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ceaff38c05bd828"
            ]
          },
          "depends_on": [
            "aws_security_group.lba_sg",
            "aws_subnet.Len_Subnet_Pub",
            "data.template_file.app_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be891d5073a33345",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0656b5f802e86ddba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0656b5f802e86ddba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "len_terra",
            "monitoring": false,
            "primary_network_interface_id": "eni-0523682c91045a814",
            "private_dns": "ip-172-31-78-54.eu-west-1.compute.internal",
            "private_ip": "172.31.78.54",
            "public_dns": "ec2-63-35-213-212.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.213.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01a7807d7667da184",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "BasBas Destroy SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bedf0736e94d2e5",
            "tags": {
              "Name": "LBA-BAS-Destroy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054b59fb7b231c98e"
            ]
          },
          "depends_on": [
            "aws_security_group.bastion_sg",
            "aws_subnet.Len_Bas_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d9213f4e66df67e4",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e7af22039dabe62",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cohort": "Eng-42",
              "Name": "LBA-destroy-this-public-route"
            },
            "vpc_id": "vpc-07e47e9d90d2076da"
          },
          "depends_on": [
            "data.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e23d42dc841366",
            "route_table_id": "rtb-0d9213f4e66df67e4",
            "subnet_id": "subnet-023c6f924c28409fd"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.Len_Subnet_Pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bas_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05de98174474f22ba",
            "route_table_id": "rtb-0d9213f4e66df67e4",
            "subnet_id": "subnet-06bedf0736e94d2e5"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.Len_Bas_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-054b59fb7b231c98e",
            "description": "bastion SG from terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.8.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-054b59fb7b231c98e",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BasBas Destroy SG",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cohort": "Eng42",
              "Name": "BasBas SG!"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e47e9d90d2076da"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lba_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-06ceaff38c05bd828",
            "description": "aws SG from terraform",
            "egress": [],
            "id": "sg-06ceaff38c05bd828",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.31.78.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LenLen Destroy SG",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cohort": "Eng42",
              "Name": "LenLen SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e47e9d90d2076da"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Len_Bas_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-06bedf0736e94d2e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.78.0/24",
            "id": "subnet-06bedf0736e94d2e5",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Cohort": "Eng-42",
              "Name": "Len-Bas-Subnet"
            },
            "vpc_id": "vpc-07e47e9d90d2076da"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Len_Subnet_Pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-023c6f924c28409fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.8.0/24",
            "id": "subnet-023c6f924c28409fd",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Cohort": "Eng-42",
              "Name": "Len-Pub-Subnet"
            },
            "vpc_id": "vpc-07e47e9d90d2076da"
          }
        }
      ]
    }
  ]
}